--- a/Modulo 4 (API,MVC,Angular,Banco de dados)/Angular projeto/angular evts/src/app/eventos/eventos.component.html
+++ b/Modulo 4 (API,MVC,Angular,Banco de dados)/Angular projeto/angular evts/src/app/eventos/eventos.component.html
@@ -1,10 +1,53 @@
-<p>eventos works!</p>
+<h1 class="text-center">LISTA DE EVENTOS:</h1>
 
-<div *ngFor="let pessoa of pessoas" >
-  <p>{{pessoa.nome}}</p>
-  <p>{{pessoa.nacimento}}</p>
-</div>
+<table class="table table-striped table-hover">
+  <thead class="table-dark">
+    <tr>
+      <th>Imagem</th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Ações</th>
+    </tr>
+    </thead>
 
-<p>Conteudo do componente!</p>
+    <tbody *ngFor="let evento of eventos">
+
+      <tr>
+        <td>{{evento.imagemURL}}</td>
+        <td>{{evento.eventoId}}</td>
+        <td>{{evento.tema}}</td>
+        <td>{{evento.local}}</td>
+        <td>{{evento.dataEvento}}</td>
+        <td>{{evento.qtdPessoas}}</td>
+        <td>{{evento.lote}}</td>
+        <td>
+          <button class="btn btn-outline-primary btn-sm">Editar</button>
+        </td>
+      </tr>
+
+    </tbody>
+
+
+
+
+
+</table>
+
+<!-- este e um loop parecido com foreach
+<div *ngFor="let evento of eventos" >
+  <p>Local: {{evento.local}}</p>
+  <p>Data: {{evento.dataEvento}}</p>
+  <p>Tema: {{evento.tema}}</p>
+  <p>Lote: {{evento.lote}}</p>
+  <p>Pessoas: {{evento.qtdPessoas}}</p>
+  <p>imagem: {{evento.imagemURL}}</p>
+  <br>
+  <hr>
+</div> -->
+
 
 
