--- a/Modulo 4 (API,MVC,Angular,Banco de dados)/Angular projeto/angular evts/src/app/eventos/eventos.component.html
+++ b/Modulo 4 (API,MVC,Angular,Banco de dados)/Angular projeto/angular evts/src/app/eventos/eventos.component.html
@@ -3,7 +3,11 @@
 <table class="table table-striped table-hover">
   <thead class="table-dark">
     <tr>
-      <th>Imagem</th>
+      <th>
+        <button (click)="mostrarImagem()"  class="btn btn-outline-light btn-sm">
+        {{mostrar ? "Ocultar" : "Exibir"}}
+      </button>
+    </th>
       <th>#</th>
       <th>Tema</th>
       <th>Local</th>
@@ -14,10 +18,10 @@
     </tr>
     </thead>
 
-    <tbody *ngFor="let evento of eventos">
+    <tbody *ngIf="eventos && eventos.length">
 
-      <tr>
-        <td>{{evento.imagemURL}}</td>
+      <tr *ngFor="let evento of eventos">
+        <td><img *ngIf="mostrar" [src]="evento.imagemURL" [style.width.px]="150" alt="" /></td>
         <td>{{evento.eventoId}}</td>
         <td>{{evento.tema}}</td>
         <td>{{evento.local}}</td>
@@ -31,6 +35,13 @@
 
     </tbody>
 
+    <tfoot *ngIf="!eventos.length">
+      <tr>
+        <td colspan="8" class="text-center">
+          <h4>Nenhum evento encontrado.</h4>
+        </td>
+      </tr>
+    </tfoot>
 
 
 
